# spike-openpyxl-change-capture

./: .~lock.urban_planning-02.xlsx#  README.md  pyproject.toml  spike00-generate_excel_data.py  spike01_excel_load_cell.py  spike02_excel_changes_cell.py  spike03_excel_load_record.py  spike04_excel_changes_record.py  urban_planning-01.xlsx  urban_planning-02.xlsx
